change_database.yml

--- a/config/database.yml
+++ b/config/database.yml
@@ -49,7 +49,8 @@ test:
 #
 production:
   <<: *default
-  database: study_group_production
-  username: root
+  database: <%= ENV['DATABASE_NAME'] %>
+  username: <%= ENV['DATABASE_USERNAME'] %>
   password: <%= ENV['DATABASE_PASSWORD'] %>
-  socket: /var/lib/mysql/mysql.sock
+  host: <%= ENV['DATABASE_HOST'] %>
+  port: <%= ENV['DATABASE_PORT'] %>
