--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: db
+  host: 127.0.0.1
   username: root
   password: password
   socket: /tmp/mysql.sock
@@ -21,6 +21,7 @@ default: &default
 development:
   <<: *default
   database: study_group_development
+  host: db
 
 test:
   <<: *default
