--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: 127.0.0.1
+  host: localhost
   username: root
   password: password
   socket: /tmp/mysql.sock
@@ -26,7 +26,7 @@ development:
 test:
   <<: *default
   database: study_group_test
-  host: 127.0.0.1
+  host: localhost
 
 production:
   <<: *default
