--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,6 +50,7 @@ jobs:
           command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
 
       # Database setup
+      - run: mkdir /tmp/mysql.sock
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
 
