--- a/config/database.yml
+++ b/config/database.yml
@@ -13,9 +13,9 @@ default: &default
   adapter: mysql2
   encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  host: localhost
   username: root
   password: password
+  host: 127.0.0.1
   socket: /tmp/mysql.sock
 
 development:
@@ -26,7 +26,7 @@ development:
 test:
   <<: *default
   database: study_group_test
-  host: localhost
+  host: 127.0.0.1
 
 production:
   <<: *default
