--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,12 @@ jobs:
 
       - image: circleci/mysql:5.6
         environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: true
-          MYSQL_ROOT_PASSWORD: ''
+          # MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_ROOT_PASSWORD: "password"
           MYSQL_DATABASE: study_group_test
-          MYSQL_HOST: localhost
-          MYSQL_ROOT_HOST: "%"
-          MYSQL_USER: root
+          # MYSQL_HOST: 127.0.0.1
+          # MYSQL_ROOT_HOST: "%"
+          # MYSQL_USER: root
 
     working_directory: ~/study_group
 
