--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -72,7 +72,14 @@ jobs:
           path: /tmp/test-results
           destination: test-results
 
-      # run rubocop
-      # - run:
-      #     name: run rubocop
-      #     command: bundle exec rubocop
+      - add_ssh_keys:
+        fingerprints:
+          - "79:19:28:9e:da:ee:53:48:64:75:0f:34:7f:84:69:38"
+
+      - deploy:
+          name: Capistrano deploy unicorn:restart
+          command: |
+            if [ "${CIRCLE_BRANCH}" != "master" ]; then
+              exit 0
+            fi
+            bundle exec cap production deploy unicorn:restart
