--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,19 +9,19 @@ jobs:
       # specify the version you desire here
       - image: circleci/ruby:2.5.1-node-browsers
         environment:
-          RAILS_ENV: test
-          # DB_HOST: localhost
-          # DB_USERNAME: 'root'
-          # DB_PASSWORD: 'password'
+          RAILS_ENV: 'test'
+          DB_HOST: 127.0.0.1
+          DB_USERNAME: 'root'
+          DB_PASSWORD: 'password'
 
       - image: circleci/mysql:5.6
         environment:
-          # MYSQL_ALLOW_EMPTY_PASSWORD: true
-          MYSQL_ROOT_PASSWORD: "password"
           MYSQL_DATABASE: study_group_test
-          # MYSQL_HOST: 127.0.0.1
-          # MYSQL_ROOT_HOST: "%"
-          # MYSQL_USER: root
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_USER: 'root'
+          MYSQL_ROOT_PASSWORD: ''
+          MYSQL_HOST: 127.0.0.1
+          MYSQL_ROOT_HOST: "%"
 
     working_directory: ~/study_group
 
