--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,18 +10,18 @@ jobs:
       - image: circleci/ruby:2.5.1-node-browsers
         environment:
           RAILS_ENV: 'test'
-          DB_HOST: 127.0.0.1
-          DB_USERNAME: 'root'
-          DB_PASSWORD: 'password'
+          # DB_HOST: 127.0.0.1
+          # DB_USERNAME: 'root'
+          # DB_PASSWORD: 'password'
 
       - image: circleci/mysql:5.6
         environment:
-          MYSQL_DATABASE: study_group_test
           MYSQL_ALLOW_EMPTY_PASSWORD: true
-          MYSQL_USER: 'root'
-          MYSQL_ROOT_PASSWORD: ''
-          MYSQL_HOST: 127.0.0.1
           MYSQL_ROOT_HOST: "%"
+          # MYSQL_DATABASE: study_group_test
+          # MYSQL_USER: 'root'
+          # MYSQL_ROOT_PASSWORD: ''
+          # MYSQL_HOST: 127.0.0.1
 
     working_directory: ~/study_group
 
