--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,11 +16,11 @@ jobs:
 
       - image: circleci/mysql:5.6
         environment:
-          # MYSQL_ALLOW_EMPTY_PASSWORD: true
-          MYSQL_ROOT_PASSWORD: "password"
-          MYSQL_DATABASE: study_group_test
+          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_ROOT_HOST: "%"
+          # MYSQL_ROOT_PASSWORD: "password"
+          # MYSQL_DATABASE: study_group_test
           # MYSQL_HOST: 127.0.0.1
-          # MYSQL_ROOT_HOST: "%"
           # MYSQL_USER: root
 
     working_directory: ~/study_group
@@ -59,7 +59,6 @@ jobs:
           command: |
             mkdir /tmp/test-results
             TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
-
             bundle exec rspec --format progress \
                             --out /tmp/test-results/rspec.xml \
                             --format progress \
