--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,14 +9,14 @@ jobs:
       # specify the version you desire here
       - image: circleci/ruby:2.5.1-node-browsers
         environment:
-          RAILS_ENV: test
+          RAILS_ENV: 'test'
           # DB_HOST: localhost
           # DB_USERNAME: 'root'
           # DB_PASSWORD: 'password'
 
       - image: circleci/mysql:5.6
         environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: true
+          MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
           MYSQL_ROOT_HOST: "%"
           # MYSQL_ROOT_PASSWORD: "password"
           # MYSQL_DATABASE: study_group_test
