--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,9 @@ jobs:
 
       - image: circleci/mysql:5.6
         environment:
-          MYSQL_ALLOW_EMPTY_PASSWORD: yes
+          MYSQL_ROOT_PASSWORD: "password"
           MYSQL_ROOT_HOST: "%"
-          # MYSQL_ROOT_PASSWORD: "password"
+          # MYSQL_ALLOW_EMPTY_PASSWORD: yes
           # MYSQL_DATABASE: study_group_test
           # MYSQL_HOST: 127.0.0.1
           # MYSQL_USER: root
