--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,39 +1,24 @@
-# Ruby CircleCI 2.1 configuration file
-#
-# Check https://circleci.com/docs/2.0/ruby/ for more details
-#
 version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
       - image: circleci/ruby:2.5.1-node-browsers
         environment:
           RAILS_ENV: 'test'
-          # DB_HOST: localhost
-          # DB_USERNAME: 'root'
-          # DB_PASSWORD: 'password'
-
       - image: circleci/mysql:5.6
         environment:
           MYSQL_ROOT_PASSWORD: "password"
           MYSQL_ROOT_HOST: "%"
-          # MYSQL_ALLOW_EMPTY_PASSWORD: yes
-          # MYSQL_DATABASE: study_group_test
-          # MYSQL_HOST: 127.0.0.1
-          # MYSQL_USER: root
 
     working_directory: ~/study_group
 
     steps:
       - checkout
 
-      # Download and cache dependencies
       - restore_cache:
           keys:
-          - v1-dependencies-{{ checksum "Gemfile.lock" }}
-          # fallback to using the latest cache if no exact match is found
-          - v1-dependencies-
+            - v1-dependencies-{{ checksum "Gemfile.lock" }}
+            - v1-dependencies-
 
       - run:
           name: install dependencies
@@ -48,12 +33,8 @@ jobs:
       - run:
           name: Wait for DB
           command: dockerize -wait tcp://127.0.0.1:3306 -timeout 120s
-
-      # Database setup
       - run: bundle exec rake db:create
       - run: bundle exec rake db:schema:load
-
-      # run tests!
       - run:
           name: run tests
           command: |
@@ -64,7 +45,6 @@ jobs:
                             --format progress \
                             $TEST_FILES
 
-      # collect reports
       - store_test_results:
           path: /tmp/test-results
       - store_artifacts:
@@ -76,7 +56,7 @@ jobs:
             - "4c:19:1e:40:60:2f:62:d1:16:14:5a:22:8f:ae:43:f0"
 
       - deploy:
-          name: Capistrano deploy unicorn:restart
+          name: Capistrano deploy
           command: |
             if [ "${CIRCLE_BRANCH}" != "master" ]; then
               exit 0
