--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,13 +8,13 @@ services:
     volumes:
       - study-group-db:/var/lib/mysql
     ports:
-      - "3306:3306"
+      - "4306:3306"
 
   app:
     tty: true
     stdin_open: true
     build: .
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: /bin/sh -c "rm -f tmp/pids/server.pid && bundle exec rails s -p 3000 -b '0.0.0.0'"
     volumes:
       - .:/study_group
     ports:
