--- a/config/database.yml
+++ b/config/database.yml
@@ -13,7 +13,7 @@ development:
 test:
   <<: *default
   database: study_group_test
-  host: localhost
+  host: 127.0.0.1
 
 production:
   <<: *default
